--- a/styles/layout.css
+++ b/styles/layout.css
@@ -6,7 +6,7 @@
 }
 
 aside {
-  background-image: url(assets/Background.png);
+  background-image: url(/assets/Background.png);
   background-size: cover;
   border-radius: .75rem;
   overflow: hidden;
